# dayder-python-api

./: .env  .env.example  .env.prod  .gitignore  .releaserc.yml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
api/: api.http
app/: dependencies.py  logger.py  main.py  require_role.py  settings.py
app/data/: __init__.py  announcement.py  announcement_repository.py  database.py  new_user_in_db.py  py_object_id.py  user.py  user_in_db.py  user_repository.py
app/repositories/: __init__.py  announcement_repository.py  user_repository.py
app/routers/: __init__.py  announcement_router.py  announcements.py  auth.py  authentication.py  user_router.py  users.py
data/: announcement.py  database.py
routers/: announcement.py
test/: test_announcement.py  test_authentication.py  test_users.py
