[tool.poetry]
name = "dayder-api"
version = "0.1.0"
description = "FastAPI application for Dayder"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "~2.9.2"
fastapi = {extras = ["standard"], version = "~0.115.3"}
PyJWT = "~2.9.0"
passlib = "~1.7.4"
bcrypt = "^3.2.0,<4.0.0"
starlette = "~0.41.2"
pymongo = "~4.9.2"
motor = "~3.6.0"
fastapi-pagination = "~0.12.31"
python-dotenv = "~1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"